@@ -1,6 +1,6 @@
 {
   "name":    "simp-tcpwrappers",
-  "version": "4.1.0",
+  "version": "5.0.0",
   "author":  "simp",
   "summary": "manages /etc/hosts.allow (/etc/hosts.deny is ALL:ALL by default)",
   "license": "Apache-2.0",
@@ -15,7 +15,7 @@
     },
     {
       "name": "simp-simpcat",
-      "version_requirement": ">= 2.0.0"
+      "version_requirement": ">= 6.0.0"
     },
     {
       "name": "simp-rsyslog",
